--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <script type="text/javascript" src="source/jquery-1.7.2.min.js"></script>
     <script type="text/javascript" src="source/jquery.mobile-1.3.1.modified.min.js"></script> <!-- this must come after jquery -->
     <script type="text/javascript" src="source/jquery.address.min.js"></script>
-    <script type="text/javascript" src="https://maps.google.com/maps/api/js?v=3.16.4&amp;sensor=false&amp;libraries=places,geometry"></script>
+    <script type="text/javascript" src="https://maps.google.com/maps/api/js?key=AIzaSyAiv1PScO0xA5IL5IUDSfoMNVk35N9H4Co&amp;v=3.16.4&amp;sensor=false&amp;libraries=places,geometry"></script>
 
     <script type="text/javascript" src="source/maps_lib.js"></script>
     <script type="text/javascript" src="fusiontable_settings.js"></script>
